# hq_det

./: .gitignore  README.md  pyproject.toml
benchmark/: README.md  benchmark.ipynb  benchmark.py  config.py
benchmark/utils/: __init__.py  base.py  calc_fps.py  compare_plot.py
hq_det/: augment.py  box_utils.py  coco_utils.py  common.py  dataset.py  dataset_provider.py  evaluate.py  image_splitter.py  print_utils.py  split_utils.py  torch_utils.py  trainer.py
hq_det/models/: base.py  dino.py  rtmdet.py  yolo.py
hq_det/monitor/: __init__.py  email_seed.py  logio.py  res2pdf.py  task_tracking.py
hq_det/tools/: tools_mmdet.py  train_codetr.py  train_deim.py  train_detrex.py  train_dino.py  train_dino2.py  train_dino_eva.py  train_dino_swin.py  (+6 more)
output_deim/: results.csv
scripts/: coco2yolo.py  coco_extract_box_subimg.py  coco_label_align.py  coco_label_merge.py  coco_merge.py  coco_remove_label.py  coco_split.py  dataset_yolo2coco.py  dino_config.py  predict_yolo.py  res2pdf.py  run_dino.py  run_evaluate.py  run_predict.py  run_rfdetr.py  run_split_evaluate.py  run_split_predict.py  run_train_codetr.py  run_train_combined.py  run_train_deim.py  run_train_detrex.py  run_train_dino.py  run_train_dino2.py  run_train_dino_eva.py  run_train_dino_swin.py  run_train_gdino.py  run_train_lwdetr.py  run_train_rfdetr.py  run_train_rtdetr.py  run_train_rtmdet.py  run_train_yolo.py  split_coco.py  split_coco_dataset.py  test.py  test_mmdet_dino.py  test_rtdetr.py  test_split_predict.py  test_transforms.py  train_yolo.py
test_notebook/: codetr.ipynb  rfdetr.ipynb  rtmdet.ipynb
(+104 files in other folders)
