[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hq_det"
version = "0.1.0"
description = "high quality image detection"
authors = [
    { name = "Xiaochuan Zou", email = "zouxiaochuan@163.com" }
]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "imgaug",
    "mmcv",
    "pydantic",
    "tensorboard",
    "faster-coco-eval",
]
requires-python = ">=3.6"

[tool.setuptools.packages.find]
where = ["."]
include = ["hq_det*"]
exclude = ["tests"]

[tools.setuptools.package-data]
hq_det = ["**/*.yml"]
